--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="PT-pt">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,7 @@
     <img src="logo_onofre.png" alt="CR.Onofre Logo" class="hero-logo" />
     <h1>Beleza que transforma</h1>
     <p>Realce sua identidade com estilo e elegância.</p>
-    <a href="https://wa.me/+351926389247" class="btn">Agende seu horário</a>
+    <a href="https://wa.me/+351932295275" class="btn">Agende seu horário</a>
   </section>
 
   <section id="sobre" class="sobre">
@@ -88,7 +88,7 @@
 
   <section id="contato" class="contato">
     <h2>Contato</h2>
-    <p>WhatsApp: <a href="https://wa.me/+351926389247">Clique aqui para conversar</a></p>
+    <p>WhatsApp: <a href="https://wa.me/+351932295275">Clique aqui para conversar</a></p>
     <p>Endereço: Av. João II, Arcozelo n622</p>
     <div class="mapa">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.2792930089095!2d-8.639791324138658!3d41.06288727134295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd247a42107efd3b%3A0xf60970e6c49e730!2sAv.%20Jo%C3%A3o%20Paulo%20II%20622%2C%204410-406%20Arcozelo!5e0!3m2!1spt-PT!2spt!4v1753385495139!5m2!1spt-PT!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
@@ -97,7 +97,7 @@
   <footer>
     <p>&copy; 2025 CR.Onofre Hairdresser | Todos os direitos reservados</p>
     <div style="margin-top: 1rem; display: flex; justify-content: center; gap: 1rem;">
-      <a href="https://wa.me/+351926389247" target="_blank" class="btn" style="background:#25D366;">
+      <a href="https://wa.me/+351932295275" target="_blank" class="btn" style="background:#25D366;">
         WhatsApp
       </a>
       <a href="https://instagram.com/" target="_blank" class="btn" style="background:linear-gradient(45deg,#fd1d1d,#fcb045,#833ab4);">
