--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CR.Onofre Hairdresser</title>
+  <title>CR.Onofre Hairdresser | Salão de Beleza em Arcozelo</title>
+  <meta name="description" content="Salão de beleza CR.Onofre em Arcozelo: cortes, coloração, tratamentos capilares e consultoria de imagem. Realce sua beleza com profissionais experientes.">
+  <meta name="keywords" content="salão de beleza, cabeleireiro, Arcozelo, corte feminino, coloração, tratamentos capilares, consultoria de imagem">
+  <meta name="author" content="CR.Onofre">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
